  * Test suite:
    - Bump perlcritic ValuesAndExpressions::RequireNumberSeparators minimum
      to 99999.
    - Add new pod-spell unit test.
    - Refactor common unit test checks for needed things into Test::Dpkg.
    - Accept perl's Lancaster Consensus AUTHOR_TESTING variable.
    - Add new minimum perl version unit test.
    - Add new synopsis unit test.
  * Documentation:
    - Improve dpkg-buildpackage(1) on environment expectations.
    - Clarify the format of the db:Status-Abbrev virtual field in
      dpkg-query(1). Closes: #824515
    - Document the tar entry size limitation for deb(5) format.
    - Document interaction between PIE and libraries in dpkg-buildflags(1).
      Based on text by Christian Seiler <christian@iwakd.de>.
    - Merge ENVIRONMENT sections in dpkg-buildflags(1).
    - Document various long options in dpkg-source --help output.
    - Move dpkg-source -q option from “Build options” to “General options”
      section in --help output.
    - Clarify shared library search order in dpkg-shlibdeps(1).
    - Remove most remaining AUTHOR sections from man an POD, as they are
      strongly discouraged, for being redundant, tending to get out-of-sync,
      and their format being inconsistent. In addition most got already
      removed in the past for the man pages.
    - Mark perlcritic as an optional author test dependency in the README.
    - Fix example code in Dpkg::Compression::FileHandle SYNOPSIS.

  [ Updated programs translations ]
  * German (Sven Joachim).
  * Simplified Chinese (Zhou Mo). Closes: #824873

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Mon, 09 May 2016 05:10:36 +0200

dpkg (1.18.7) unstable; urgency=medium

  [ Guillem Jover ]
  * Add new dpkg-source --require-strong-checksums option and change default.
    There is no point in erroring out on this condition when signature issues